<resources>
    <string name="app_name">STERNRADIO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Мы с теми, кто в теме!</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="network_error">Ошибка сети. Восстановите подключение для дальнейшего проигрывания!</string>
    <string name="actual_track_info">В эфире:\n%s</string>
    <string name="next_track_info">Следующий:\n%s</string>
    <string name="buffering">Буферизация...</string>
    <string name="permission_info">Для корректной работы радио необходимо выдать разрешения. Доступ к файлам нужен для буферизации аудиопотока. Доступ к звонкам необходим для того, что бы во время входящего звонка радио отключалось. Для продолжения нажмите кнопку Выдать разрешения.</string>
    <string name="granted_permissions">Выдать разрешения</string>
    <string name="ok">Ок</string>
    <string name="info_radio">Привет друзья и все любители рок-музыки! Мы рады сообщить вам о запуске нашего проекта! STERNRADIO-это постоянный поток рок музыки 24 часа в сутки. Вы услышите много знакомых композиций начиная от пост-панка до самого метал-кора. Но самая главная суть нашего проекта это поведать вам о нашей отечественной андеграунд сцене. С нами сотрудничают уже множество команд играющих рок музыку в самых разных направлениях. А если у вас к тому же есть свой музыкальный коллектив, то вам повезло вдвойне! У вас есть все шансы попасть к нам в эфир. Каждую неделю мы будем открывать и рассказывать вам про наши команды которые качают рифы от Мурманска до самой Камчатки! \n /команда STERNRADIO/</string>
    <string name="beta_info">Уважаемые пользователи, наше приложение ещё маленькое и довольно сырое. Оно находится в бета-тестировании. Если Вы заметите баги или у Вас есть идеи по его улучшению, то пишите на почту, мы будет очень рады обратной связи. \n
Что будет реализовано попозже:\n
- отправка заказов\n
- добавление треков в избранное\n
- раздел с новостями \n
- виджет для рабочего стола</string>
    <string name="settings_notification">Включить уведомление</string>
    <string name="settings_notification_subtitle">Постоянное уведомление в строке состояния с кнопками паузы и выхода</string>
    <string name="site_sternradio">Наш сайт</string>
    <string name="beta_version">Бета версия!</string>
    <string name="send_email">Почта</string>
    <string name="share_app">Поделиться</string>
    <string name="about_radio">О нас</string>
    <string name="settings">Настройки</string>
    <string name="communicate">Взаимодействие</string>
    <string name="alarm_clock">Будильник</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alarm_will_ring_in_an">Будильник сработает через</string>
    <string name="monday">ПН</string>
    <string name="tuesday">ВТ</string>
    <string name="wednesday">СР</string>
    <string name="thursday">ЧТ</string>
    <string name="friday">ПТ</string>
    <string name="saturday">СБ</string>
    <string name="sunday">ВС</string>
    <string name="single_alarm">Сигнал без повтора</string>
    <string name="cancel">Отмена</string>
    <string name="set">Установить</string>
    <string name="alarm_off">Будильник выключен</string>
    <string name="sternradio_alarm">Sternradio будильник</string>
    <string name="cancel_alarm">Отключить будильник</string>
    <string name="dont_call_alarms">Проблемы с радио?</string>

    <string name="asus_info">Добавьте будильник в автозапуск      1)Asus Mobile Manager      2)Auto-start Manager</string>
    <string name="xiaomi_info">На телефонах марки Xiaomi также необходимо добавить будильник в автозапуск.\n
    1)Настройки\n
    2)Разрешения\n
    3)Управление автозапуском\n
    Также проверьте:\n
    1)Настройки\n
    2)Дополнительные настройки\n
    3)Аккумулятор и производительность\n
    4)Использование аккумулятора приложениями\n
    5)Будильник - не ограничивать</string>
    <string name="instruction_life_alarm">Если у Вас не срабатывает будильник, не торопитесь его винить. Некоторые производители телефонов добавляют дополнительные настройки энергосбережения или управления фоновыми задачами, которые не дают нормально работать будильнику. Добавьте будильник в исключения Phone Manager или в настройках найдите разделы, относящиеся к Батарее, Управлению питанием, Менеджеру фоновых приложений или Защищённым приложениям. \nЕсли после всех настроек в работе будильника есть ошибки, то напишите мне на почту, постараемся вместе разобраться!</string>
    <string name="samsung_info"> На телефонах марки Samsung необходимо добавить будильник в неотслеживаемые приложения. Для этого:\n
    1)Откройте настройки\n
    2)Перейдите в раздел Обслуживание устройства\n
    3)Батарея\n
    4)Неотслеживаемые приложения\n\n
    Дополнение для Android 9+:\n
    1)Настройки\n
    2)Приложения\n
    3)3 точки в правом верхнем углу. Специальный доступ.\n
    4)Оптимизация использования батареи\n
    5)Отключить будильник</string>
    <string name="huawei_info">
        Не относится к моделям Nexus!\n
        До 7 Android:\n
        1)Настройки\n
        2)Дополнительные настройки\n
        3)Менеджер батареи\n
        4)Защищенные приложения\n
        или\n
        1)Настройки\n
        2)Приватность и безопасность\n
        3)Защищенные приложения\n
        После 7 Android:\n
        1)Менеджер телефона\n
        2)Очистка экрана блокировки\n
        3)Убедитесь, что приложение не включено\n
        или:\n
        1)Настройки\n
        2)Баттарея\n
        3)Очистка экрана блокировки\n
        4)Будильник -> Не закрывать
    </string>
    <string name="oppo_info">На телефонах OPPO необходимо добавить будильник в автозапуск. Для этого:\n
    1)Менеджер телефона\n
    2)Разрешения приватности\n
    3)Менеджер автозапуска\n
    или\n
    1)Настройки\n
    2)Управление приложениями\n
    3)Будильник\n
    4)Разрешения для приложений\n
    5)Включить телефон\n
    6)Разрешить автозапуск - включить</string>
    <string name="oneplus_info">
        1)Настройки аккумулятора\n
        2)Оптимизация батареи\n
        3)Будильник -> не отпимизировать
    </string>
    <string name="lenovo_info">
        1)Настройки\n
        2)Менеджер фоновых приложений\n
        3)Отключите будильник
    </string>
    <string name="xperia_info">
        1)Настройки\n
        2)Аккумулятор\n
        3)Меню (три точки в правом верхнем углу) \n
        4)Оптимизация батареи\n
        5)Отключите оптимизацию для будильника
    </string>
    <string name="other_info">
        Если Вы не нашли в настройках никакой информации, связанной с батареей, фововыми задачами и т.д., то обратите внимание на программы, связанные с очисткой телефона или антивирусы (360, Avast, CCleaner, Greenify) и добавьте будильник в их исключения. Если ничего не помогает, напишите мне на почту, постараемся вместе разобраться в проблеме.
    </string>


    <string name="open_battery_settings">Открыть настройки энергосбережения</string>
    <string name="info_manufactures">Решения для разных производителей</string>
    <string name="xiaomi" translatable="false">Xiaomi</string>

    <string name="samsung" translatable="false">Samsung</string>

    <string name="huawei" translatable="false">Huawei</string>

    <string name="oppo" translatable="false">Oppo</string>

    <string name="asus" translatable="false">Asus</string>

    <string name="oneplus" translatable="false">OnePlus</string>

    <string name="lenovo" translatable="false">Lenovo</string>

    <string name="xperia" translatable="false">Xperia</string>
    <string name="other">Другие модели</string>
    <string name="autostart">Автозапуск</string>
    <string name="unmonitored_apps">Неотслеживаемые приложения</string>
    <string name="protected_apps">Protected apps</string>
    <string name="off_alarm">Выключить будильник</string>
</resources>
