<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/alarm"
            android:title="@string/alarm_clock"
            android:checkable="true"
            app:actionLayout="@layout/checkbox"
            app:showAsAction="ifRoom|withText" />


        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/aboutus"
            android:title="@string/about_radio" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share"
                android:title="@string/share_app" />
            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/message"
                android:title="@string/send_email" />

            <item
                android:id="@+id/nav_www"
                android:icon="@drawable/www"
                android:title="@string/site_sternradio" />

            <item
                android:id="@+id/nav_beta"
                android:icon="@drawable/alert"
                android:title="@string/beta_version" />
        </menu>
    </item>

</menu>
